--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dropzone": "^14.2.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "quality-lac-data-ref-authorities": "github:SocialFinanceDigitalLabs/quality-lac-data-ref-authorities"
   },
   "scripts": {
     "start": "REACT_APP_API_IMPLEMENTATION=pyodide react-scripts start",
