feat: first Block from npm

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "preserveSymlinks": false,
     "baseUrl": "src",
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext", "WebWorker"],
