--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/lab": "^5.0.0-alpha.102",
     "@mui/material": "^5.10.6",
-    "@sfdl/sf-cookie-gate": "^0.0.2",
-    "@sfdl/sf-mui-components": "^0.0.1",
     "@sfdl/prpc": "^0.0.3",
+    "@sfdl/sf-cookie-gate": "^0.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,13 +18,13 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "moment": "^2.29.4",
+    "quality-lac-data-ref-authorities": "github:SocialFinanceDigitalLabs/quality-lac-data-ref-authorities",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
-    "web-vitals": "^2.1.4",
-    "quality-lac-data-ref-authorities": "github:SocialFinanceDigitalLabs/quality-lac-data-ref-authorities"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "REACT_APP_API_IMPLEMENTATION=pyodide react-scripts start",
