--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.2.2",
     "@types/node": "^18.11.9",
+    "@types/plotly.js": "^2.12.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "@types/react-plotly.js": "^2.5.2",
     "moment": "^2.29.4",
+    "plotly.js": "^2.16.3",
     "quality-lac-data-ref-authorities": "github:SocialFinanceDigitalLabs/quality-lac-data-ref-authorities",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-plotly.js": "^2.6.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
