--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/lab": "^5.0.0-alpha.102",
     "@mui/material": "^5.10.6",
-    "@sfdl/prpc": "^0.0.3",
+    "@sfdl/prpc": "^0.1.0",
     "@sfdl/sf-cookie-gate": "^0.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -22,6 +22,7 @@
     "moment": "^2.29.4",
     "plotly.js": "^2.16.3",
     "quality-lac-data-ref-authorities": "github:SocialFinanceDigitalLabs/quality-lac-data-ref-authorities",
+    "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
