--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/lab": "^5.0.0-alpha.102",
     "@mui/material": "^5.10.6",
-    "@sfdl/prpc": "^0.1.1",
+    "@reduxjs/toolkit": "^1.9.1",
+    "@sfdl/prpc": "^0.3.0",
     "@sfdl/sf-cookie-gate": "^0.0.2",
+    "@sfdl/sf-mui-components": "^0.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -27,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-plotly.js": "^2.6.0",
+    "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
@@ -54,5 +57,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@redux-devtools/core": "^3.13.1"
   }
 }
