--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@types/react-plotly.js": "^2.5.2",
     "moment": "^2.29.4",
     "plotly.js": "^2.16.3",
-    "quality-lac-data-ref-authorities": "github:SocialFinanceDigitalLabs/quality-lac-data-ref-authorities",
+    "quality-lac-data-ref-authorities": "git+https://github.com/SocialFinanceDigitalLabs/quality-lac-data-ref-authorities.git",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
